// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`copyselect.sql > line 4 1`] = `
[
  "create table test1 (id serial, t text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "test1",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "is_local": true,
                  "location": 20,
                  "typeName": {
                    "location": 23,
                    "names": [
                      {
                        "String": {
                          "sval": "serial",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "t",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copyselect.sql > line 11 1`] = `
[
  "create table test2 (id serial, t text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "test2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "is_local": true,
                  "location": 20,
                  "typeName": {
                    "location": 23,
                    "names": [
                      {
                        "String": {
                          "sval": "serial",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "t",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copyselect.sql > line 18 1`] = `
[
  "create view v_test1
as select 'v_'||t from test1",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 43,
                      "relname": "test1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 30,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "location": 30,
                              "sval": {
                                "sval": "v_",
                              },
                            },
                          },
                          "location": 34,
                          "name": [
                            {
                              "String": {
                                "sval": "||",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "t",
                                  },
                                },
                              ],
                              "location": 36,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 12,
              "relname": "v_test1",
              "relpersistence": "p",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copyselect.sql > line 24 1`] = `
[
  "copy test1 to stdout",
  {
    "stmts": [
      {
        "stmt": {
          "CopyStmt": {
            "relation": {
              "inh": true,
              "location": 5,
              "relname": "test1",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copyselect.sql > line 28 1`] = `
[
  "copy v_test1 to stdout",
  {
    "stmts": [
      {
        "stmt": {
          "CopyStmt": {
            "relation": {
              "inh": true,
              "location": 5,
              "relname": "v_test1",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copyselect.sql > line 32 1`] = `
[
  "copy (select t from test1 where id=1) to stdout",
  {
    "stmts": [
      {
        "stmt": {
          "CopyStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 20,
                      "relname": "test1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 13,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "id",
                            },
                          },
                        ],
                        "location": 32,
                      },
                    },
                    "location": 34,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 35,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copyselect.sql > line 36 1`] = `
[
  "copy (select t from test1 where id=3 for update) to stdout",
  {
    "stmts": [
      {
        "stmt": {
          "CopyStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 20,
                      "relname": "test1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "lockingClause": [
                  {
                    "LockingClause": {
                      "strength": "LCS_FORUPDATE",
                      "waitPolicy": "LockWaitBlock",
                    },
                  },
                ],
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 13,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "id",
                            },
                          },
                        ],
                        "location": 32,
                      },
                    },
                    "location": 34,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 3,
                        },
                        "location": 35,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copyselect.sql > line 40 1`] = `
[
  "copy (select t into temp test3 from test1 where id=3) to stdout",
  {
    "stmts": [
      {
        "stmt": {
          "CopyStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 36,
                      "relname": "test1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "intoClause": {
                  "onCommit": "ONCOMMIT_NOOP",
                  "rel": {
                    "inh": true,
                    "location": 25,
                    "relname": "test3",
                    "relpersistence": "t",
                  },
                },
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 13,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "id",
                            },
                          },
                        ],
                        "location": 48,
                      },
                    },
                    "location": 50,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 3,
                        },
                        "location": 51,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
